--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,12 +17,8 @@ on:
 
 jobs:
   build:
-    name: Build on ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+    name: Build on ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Check out
         uses: actions/checkout@v3
@@ -74,9 +70,9 @@ jobs:
         run: |
           python build.py -vr all
 
-      - name: Build debug
-        run: |
-          python build.py -v all
+      # - name: Build debug
+      #   run: |
+      #     python build.py -v all
 
       - name: Stop gradle daemon
         run: ./gradlew --stop
@@ -89,46 +85,46 @@ jobs:
           name: ${{ github.sha }}
           path: out
 
-      - name: Upload mapping and native debug symbols
-        if: runner.os == 'Linux'
-        uses: actions/upload-artifact@v3
-        with:
-          name: ${{ github.sha }}-symbols
-          path: app/build/outputs
+      # - name: Upload mapping and native debug symbols
+      #   if: runner.os == 'Linux'
+      #   uses: actions/upload-artifact@v3
+      #   with:
+      #     name: ${{ github.sha }}-symbols
+      #     path: app/build/outputs
 
-  test:
-    name: Test on ${{ matrix.api }}
-    runs-on: macos-latest
-    needs: build
-    strategy:
-      fail-fast: false
-      matrix:
-        api: [23, 26, 28, 29, 34]
+  # test:
+  #   name: Test on ${{ matrix.api }}
+  #   runs-on: macos-latest
+  #   needs: build
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       api: [23, 26, 28, 29, 34]
 
-    steps:
-      - name: Check out
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
+  #   steps:
+  #     - name: Check out
+  #       uses: actions/checkout@v3
+  #       with:
+  #         fetch-depth: 0
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          distribution: "temurin"
-          java-version: "17"
+  #     - name: Set up JDK 17
+  #       uses: actions/setup-java@v3
+  #       with:
+  #         distribution: "temurin"
+  #         java-version: "17"
 
-      - name: Set up Python 3
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.x"
+  #     - name: Set up Python 3
+  #       uses: actions/setup-python@v4
+  #       with:
+  #         python-version: "3.x"
 
-      - name: Download build artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: ${{ github.sha }}
-          path: out
+  #     - name: Download build artifacts
+  #       uses: actions/download-artifact@v3
+  #       with:
+  #         name: ${{ github.sha }}
+  #         path: out
 
-      - name: AVD test
-        run: |
-          brew install coreutils
-          scripts/avd_test.sh ${{ matrix.api }}
+  #     - name: AVD test
+  #       run: |
+  #         brew install coreutils
+  #         scripts/avd_test.sh ${{ matrix.api }}
